--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <script src="https://kit.fontawesome.com/b0b659ad54.js" crossorigin="anonymous"></script>        
 </head>
 <body>
-    
     <div id="page" class="page">
         <div id="page1" class="page">
             <div id="svg">
@@ -51,37 +50,78 @@
                 <h1>Model 3</h1>
             </div>
             <div id="footer1" class="footer">
-                <h2>3.1 s</h2>
-                <h2>353mi</h2>
-                <h2>AWD</h2>
-                <button id="order" class="order">ORDER NOW</button>
+                <ul>
+                    <li>
+                        <h2>3.1 s</h2>
+                    </li>
+                    <li>
+                        <h2>353mi</h2>
+                    </li>
+                    <li>
+                        <h2>AWD</h2>
+                    </li>
+                    <li>
+                        <button id="order" class="order">ORDER NOW</button>
+                    </li>
+                </ul>
             </div>
             <div id="footer2" class="footer">
-                <h6>0-60 mph*</h6>
-                <h6>Range (EPA est.)</h6>
-                <h6>Dual Motor</h6>
+                <ul>
+                    <li><h6>0-60 mph*</h6></li>
+                    <li><h6>Range (EPA est.)</h6></li>
+                    <li class="dual"><h6>Dual Motor</h6></li>
+                </ul>
+            </div>
+            <div id="question">
+                <button>
+                    <img src="data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='28px' height='26px' viewBox='0 0 28 26' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3C!-- Generator: Sketch 63.1 (92452) - https://sketch.com --%3E%3Ctitle%3EGroup%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='Group' transform='translate(0.350000, 0.850000)' fill='%23171A20' fill-rule='nonzero'%3E%3Cpath d='M23.45,-1.77635684e-15 L3.85,-1.77635684e-15 C1.7237037,-1.77635684e-15 3.55271368e-15,1.7237037 3.55271368e-15,3.85 L3.55271368e-15,16.45 L0.0070263,16.6845313 C0.128234,18.7016136 1.8024554,20.3 3.85,20.3 L7,20.3 L7,23.158646 C7,23.490527 7.1167385,23.8118332 7.3297774,24.0663119 L7.4520807,24.1952425 C7.9665335,24.6738387 8.7689278,24.7055979 9.3216659,24.2428687 L14.0308,20.3 L23.45,20.3 C25.5762963,20.3 27.3,18.5762963 27.3,16.45 L27.3,3.85 C27.3,1.7237037 25.5762963,-1.77635684e-15 23.45,-1.77635684e-15 Z M3.85,2.1 L23.45,2.1 C24.4164983,2.1 25.2,2.8835017 25.2,3.85 L25.2,16.45 C25.2,17.4164983 24.4164983,18.2 23.45,18.2 L13.522786,18.2 C13.3585191,18.2 13.1994842,18.2577698 13.0735147,18.363199 L9.1,21.6888 L9.1,21.6888 L9.1,18.9 C9.1,18.5134007 8.7865993,18.2 8.4,18.2 L3.85,18.2 L3.85,18.2 C2.8835017,18.2 2.1,17.4164983 2.1,16.45 L2.1,3.85 C2.1,2.8835017 2.8835017,2.1 3.85,2.1 Z' id='bubble-outline'%3E%3C/path%3E%3Cpath d='M13.65,8.75 C14.4231986,8.75 15.05,9.3768014 15.05,10.15 C15.05,10.9231986 14.4231986,11.55 13.65,11.55 C12.8768014,11.55 12.25,10.9231986 12.25,10.15 C12.25,9.3768014 12.8768014,8.75 13.65,8.75 Z M8.05,8.75 C8.8231986,8.75 9.45,9.3768014 9.45,10.15 C9.45,10.9231986 8.8231986,11.55 8.05,11.55 C7.2768014,11.55 6.65,10.9231986 6.65,10.15 C6.65,9.3768014 7.2768014,8.75 8.05,8.75 Z M19.25,8.75 C20.0231986,8.75 20.65,9.3768014 20.65,10.15 C20.65,10.9231986 20.0231986,11.55 19.25,11.55 C18.4768014,11.55 17.85,10.9231986 17.85,10.15 C17.85,9.3768014 18.4768014,8.75 19.25,8.75 Z' id='circles'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/svg%3E" alt="">
+                </button>
+            </div>
+            <div id="speed" class="svg">
+                    <div class="outer">
+                        <svg fill="#fff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 21" class="tcl-speedometer__outer-circle" fill="var(--tds-color--secondary)">
+                            <path d="M 39.999999,19.798617 A 19.824417,19.633985 0 0 0 34.877782,6.6213841 L 34.16909,5.8402141 C 26.397915,-1.9017959 13.745528,-1.9531229 5.9107311,5.7258771 A 19.91037,19.719113 0 0 0 1.8907042e-4,19.833252 V 21 H 3.9064221 V 19.833252 H 2.3727481 A 17.490621,17.322608 0 0 1 6.8692771,8.2425621 l 1.181013,1.060755 0.778213,-0.874643 -1.18017,-1.038221 A 17.570675,17.401893 0 0 1 19.4513,2.4230131 v 2.227086 h 1.180592 v -2.273822 a 17.589214,17.420254 0 0 1 11.802124,5.002908 l -1.179328,0.991068 0.778213,0.874643 1.180171,-1.014019 a 17.484722,17.316765 0 0 1 4.461979,11.5447899 h -1.582128 v 1.165911 h 3.907076 z"></path>
+                        </svg>
+                    </div>
+                    <div class="inner">
+                      <svg fill="rgba(255, 255, 255, 0.25)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 14" class="tcl-speedometer__inner-circle" fill="var(--tds-color--secondary)">
+                        <path d="M 28,14 H 0 C 0,6.2697403 6.2698076,0 14.000646,0 21.730623,0 28,6.2697403 28,14 Z"></path>
+                      </svg>
+                    </div>
+                    <disv class="needle">
+                        <svg fill="#fff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4 16" class="tcl-speedometer__needle" fill="var(--tds-color--secondary)">
+                            <path style="stroke-width:0.438269" d="m 3.9966676,14.119499 c 0,0.01426 0.00178,0.02809 0.00178,0.04236 a 1.8542546,1.8030219 0 0 1 -0.2773389,0.919658 1.8986998,1.8462391 0 0 1 -0.4084515,0.485329 c -0.3133387,0.261032 -0.7013456,0.40192 -1.1324642,0.42569 a 2.188927,2.1284474 0 0 1 -0.2102259,0.0073 c -0.042667,-4.32e-4 -0.084891,-0.0048 -0.1271133,-0.0078 a 2.0587025,2.001821 0 0 1 -0.4920101,-0.09415 2.0102572,1.9547142 0 0 1 -0.48178617,-0.210468 1.7991425,1.7494325 0 0 1 -0.7644577,-0.967201 1.8471433,1.7961071 0 0 1 -0.1035575,-0.61671 c 0,-0.0086 0.00134,-0.01728 0.00178,-0.02593 -4.444e-4,-0.02636 -0.003560001,-0.05143 -0.002660001,-0.07822 0,-0.01599 8.8890101e-4,-0.03155 0.002660001,-0.04711 L 1.4015113,0.54108535 C 1.4330673,0.23294635 1.7112944,-0.00129065 2.0428558,5.3517167e-6 2.3735282,8.7035172e-4 2.6508663,0.23813235 2.6815336,0.54670335 L 3.9975564,14.011024 c 0.00266,0.02247 0.00266,0.04495 0.00222,0.06699 -4.444e-4,0.01426 -0.00266,0.02766 -0.00311,0.04148 z"></path>
+                        </svg>
+                    </div>
+                      </div>
             </div>
         </div>
         <div id="page2" class="page">
-            <h4>Safety</h4>
-            <h2>Built for Safety</h2>
-            <p>
-                Safety is the most important part of the<br>overall Model 3 design. The metal<br>structure is a combination of aluminum<br>and steel, for maximum strength in every<br>area. In a roof-crush test, Model 3 resisted<br>four times its own mass, even with an all-<br>glass roof: that's the same weight as two<br>full-grown African elephants.
-            </p>
+            <div id="safety">
+                <h4>Safety</h4>
+                <h2>Built for Safety</h2>
+                <p>
+                    Safety is the most important part of the<br>overall Model 3 design. The metal<br>structure is a combination of aluminum<br>and steel, for maximum strength in every<br>area. In a roof-crush test, Model 3 resisted<br>four times its own mass, even with an all-<br>glass roof: that's the same weight as two<br>full-grown African elephants.
+                </p>
+            </div>
             <div id="stars" class="list">
                 <ul>
-                    <li>Driver<h6>Frontal</h6></li>
-                    <li>Passenger<h6>Frontal</h6></li>
-                    <li>Front Seat<h6>Side</h6></li>
-                    <li>Front Seat<h6>Side</h6></li>
-                    <li>Rollover</li>
-                    
+                    <li class="driver">Driver<h6>Frontal</h6></li>
+                    <li class="passenger">Passenger<h6>Frontal</h6></li>
+                    <li class="front">Front Seat<h6>Side</h6></li>
+                    <li class="rear">Rear Seat<h6>Side</h6></li>
+                    <li class="rollover">Rollover</li>
                 </ul>
             </div>
         </div>
-        <div id="page3" class="page">
-
+        <div id="question">
+            <button>
+                <img src="data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='28px' height='26px' viewBox='0 0 28 26' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3C!-- Generator: Sketch 63.1 (92452) - https://sketch.com --%3E%3Ctitle%3EGroup%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='Group' transform='translate(0.350000, 0.850000)' fill='%23171A20' fill-rule='nonzero'%3E%3Cpath d='M23.45,-1.77635684e-15 L3.85,-1.77635684e-15 C1.7237037,-1.77635684e-15 3.55271368e-15,1.7237037 3.55271368e-15,3.85 L3.55271368e-15,16.45 L0.0070263,16.6845313 C0.128234,18.7016136 1.8024554,20.3 3.85,20.3 L7,20.3 L7,23.158646 C7,23.490527 7.1167385,23.8118332 7.3297774,24.0663119 L7.4520807,24.1952425 C7.9665335,24.6738387 8.7689278,24.7055979 9.3216659,24.2428687 L14.0308,20.3 L23.45,20.3 C25.5762963,20.3 27.3,18.5762963 27.3,16.45 L27.3,3.85 C27.3,1.7237037 25.5762963,-1.77635684e-15 23.45,-1.77635684e-15 Z M3.85,2.1 L23.45,2.1 C24.4164983,2.1 25.2,2.8835017 25.2,3.85 L25.2,16.45 C25.2,17.4164983 24.4164983,18.2 23.45,18.2 L13.522786,18.2 C13.3585191,18.2 13.1994842,18.2577698 13.0735147,18.363199 L9.1,21.6888 L9.1,21.6888 L9.1,18.9 C9.1,18.5134007 8.7865993,18.2 8.4,18.2 L3.85,18.2 L3.85,18.2 C2.8835017,18.2 2.1,17.4164983 2.1,16.45 L2.1,3.85 C2.1,2.8835017 2.8835017,2.1 3.85,2.1 Z' id='bubble-outline'%3E%3C/path%3E%3Cpath d='M13.65,8.75 C14.4231986,8.75 15.05,9.3768014 15.05,10.15 C15.05,10.9231986 14.4231986,11.55 13.65,11.55 C12.8768014,11.55 12.25,10.9231986 12.25,10.15 C12.25,9.3768014 12.8768014,8.75 13.65,8.75 Z M8.05,8.75 C8.8231986,8.75 9.45,9.3768014 9.45,10.15 C9.45,10.9231986 8.8231986,11.55 8.05,11.55 C7.2768014,11.55 6.65,10.9231986 6.65,10.15 C6.65,9.3768014 7.2768014,8.75 8.05,8.75 Z M19.25,8.75 C20.0231986,8.75 20.65,9.3768014 20.65,10.15 C20.65,10.9231986 20.0231986,11.55 19.25,11.55 C18.4768014,11.55 17.85,10.9231986 17.85,10.15 C17.85,9.3768014 18.4768014,8.75 19.25,8.75 Z' id='circles'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/svg%3E" alt="">
+            </button>
         </div>
+        <!-- <div id="page3" class="page">
+
+        </div> -->
     </div>
 </body>
 </html>
