Tesla Weekend Project

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Model 3 | Testla</title>
+    <title>Model 3 | Tesla</title>
     <link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
+    <link rel="shortcut icon" type="image/jpg" href="https://www.tesla.com/themes/custom/tesla_frontend/assets/favicons/favicon.ico"/>
     <link rel="stylesheet" href="./CSS/style.css">
     <script src="https://kit.fontawesome.com/b0b659ad54.js" crossorigin="anonymous"></script>        
 </head>
@@ -133,6 +134,7 @@
             </div>
         </div>
         <div id="page3" class="page">
+        
         </div>
     </div>
 </body>
